--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 @import "tailwindcss";
 
+/*
 @theme {
   --color-primary: #1da1f2;
   --font-family-sans: 'Satoshi', sans-serif;
+}*/
+
+body {
+  font-family: 'Inter', sans-serif;
 }
